@@ -1,4 +1,4 @@
-.\"	$eterna: bozohttpd.8,v 1.94 2010/05/10 14:49:19 mrg Exp $
+.\"	$eterna: bozohttpd.8,v 1.95 2010/05/13 04:17:58 mrg Exp $
 .\"
 .\" Copyright (c) 1997-2010 Matthew R. Green
 .\" All rights reserved.
@@ -450,7 +450,7 @@ The focus has always been simplicity and security, with minimal features
 and regular code audits.
 This manual documents
 .Nm
-version 20100510.
+version 20100512.
 .Sh AUTHORS
 .Nm
 was written by Matthew R. Green
